# titanic-portfolio

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: documentation.yml
__init__/: index.html
docs/: index.md
report/: report.md
search/: search_index.json
