[tool.poetry]
name = "docs"
version = "0.1.0"
description = "mkdocs - courses"
authors = ["Francisco Alfaro <francisco.alfaro.496@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "9.5.25"
mkdocs-jupyter = "^0.24.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
